# metrics-prometheus-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
src/: failure.rs  lib.rs  metric.rs  recorder.rs  storage.rs
src/recorder/: freezable.rs  frozen.rs  layer.rs  mod.rs
src/storage/: immutable.rs  mod.rs  mutable.rs
