[package]
name = "metrics-prometheus"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "`prometheus` backend for `metrics` crate."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/metrics-prometheus"
homepage = "https://github.com/instrumentisto/metrics-prometheus-rs"
repository = "https://github.com/instrumentisto/metrics-prometheus-rs"
readme = "README.md"
keywords = ["metrics", "prometheus"]
categories = ["development-tools::debugging"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]

[dependencies]
arc-swap = "1.5"
metrics = { version = "0.24", default-features = false }
metrics-util = { version = "0.19", features = ["registry"], default-features = false }
prometheus = { version = "0.14", default-features = false }
sealed = "0.6"
smallvec = "1.10"

[dev-dependencies]
metrics-util = { version = "0.19", features = ["layer-filter"], default-features = false }
