[package]
name = "metrics-prometheus"
version = "0.11.1"
edition = "2024"
rust-version = "1.85"
description = "`prometheus` backend for `metrics` crate."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/metrics-prometheus"
homepage = "https://github.com/tyranron/metrics-prometheus-rs"
repository = "https://github.com/tyranron/metrics-prometheus-rs"
readme = "README.md"
keywords = ["metrics", "prometheus"]
categories = ["development-tools::debugging"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]

[dependencies]
arc-swap = "1.5"
metrics = { version = "0.24", default-features = false }
metrics-util = { version = "0.20", features = ["registry"], default-features = false }
prometheus = { version = "0.14", default-features = false }
sealed = "0.6"
smallvec = "1.10"

[dev-dependencies]
metrics-util = { version = "0.20", features = ["layer-filter"], default-features = false }
